test/scc/pp/errors/053.a
053.t:2:2: error: unterminated #else